# scpn-quantum-control

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zenodo.json  404.html  CAPABILITIES_AND_USECASES.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPRECATIONS.md  DLA_SCALING_RESULTS.md  Dockerfile  GAP_CLOSURE_STATUS.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE.md  PREPRINT_METHODS.md  PREPRINT_OUTLINE.md  PUBLICATION_FRAMING.md  README.md  RESULTS_SUMMARY.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO_COVERAGE.md  VALIDATION.md  _typos.toml  execution_surface_manifest.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-ci-cross-platform-smoke.in  (+13 more)
oscillatools/: .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE.md  README.md  REUSE.toml  mkdocs.yml  pyproject.toml
oscillatools/docs/: capabilities.md  competitive_benchmark.md  gallery.md  gradient_coverage_matrix.md  handbook.md  index.md  tier_benchmarks.md  why_oscillatools.md
oscillatools/examples/: README.md  kuramoto_handbook_workflow.py
oscillatools/src/oscillatools/: __init__.py  _version.py  neural_operator.py
oscillatools/src/oscillatools/accel/: __init__.py  daido_mean_field.py  daido_observables.py  daido_phase.py  diff_kuramoto_adaptive.py  diff_kuramoto_delay_sensitivity.py  diff_kuramoto_delayed.py  diff_kuramoto_dopri.py  diff_kuramoto_euler.py  diff_kuramoto_inertial.py  diff_kuramoto_mpc_kkt.py  diff_kuramoto_noisy.py  diff_kuramoto_rk4.py  dispatcher.py  formal_neural_lyapunov.py  jax_kuramoto.py  jax_kuramoto_delayed.py  jax_kuramoto_integrators.py  jax_kuramoto_mpc.py  kuramoto_basin_stability.py  kuramoto_bayesian_inference.py  kuramoto_chimera.py  kuramoto_clusters.py  kuramoto_coherence_matrix.py  kuramoto_control.py  kuramoto_coupling_design.py  kuramoto_coupling_function_inference.py  kuramoto_critical_coupling.py  kuramoto_delayed.py  kuramoto_delayed_mean_field.py  kuramoto_energy.py  kuramoto_explosive_continuation.py  kuramoto_frequency_order.py  kuramoto_heterogeneous.py  kuramoto_hyperedge.py  kuramoto_inertial.py  kuramoto_lyapunov.py  kuramoto_mean_field.py  kuramoto_network_control.py  kuramoto_networkx_interop.py  (+40 more)
oscillatools/tests/: conftest.py  kuramoto_autodiff_witness.py  kuramoto_delay_sensitivity_witness.py  test_accel_dispatch.py  test_capability_snapshot.py  test_daido_mean_field.py  test_daido_observables.py  test_daido_phase.py  test_diff_kuramoto_adaptive.py  test_diff_kuramoto_autodiff_witness.py  test_diff_kuramoto_delay_sensitivity.py  test_diff_kuramoto_delay_sensitivity_witness.py  test_diff_kuramoto_delayed.py  test_diff_kuramoto_dopri.py  test_diff_kuramoto_euler.py  test_diff_kuramoto_inertial.py  test_diff_kuramoto_mpc_kkt.py  test_diff_kuramoto_noisy.py  test_diff_kuramoto_rk4.py  test_docs_public_face_hygiene.py  test_formal_neural_lyapunov.py  test_gradient_matrix_renderer.py  test_handbook_workflow_example.py  test_jax_kuramoto.py  test_jax_kuramoto_delayed.py  test_jax_kuramoto_mpc.py  test_kuramoto_adaptive.py  test_kuramoto_basin_stability.py  test_kuramoto_bayesian_inference.py  test_kuramoto_chimera.py  test_kuramoto_chimera_reproduction.py  test_kuramoto_clusters.py  test_kuramoto_coherence_matrix.py  test_kuramoto_collective_control.py  test_kuramoto_control.py  test_kuramoto_coordinated_reset.py  test_kuramoto_coupling_design.py  test_kuramoto_coupling_function_inference.py  test_kuramoto_critical_coupling.py  test_kuramoto_critical_coupling_microscopic.py  (+68 more)
oscillatools/tools/: capability_snapshot.py  render_gradient_coverage_matrix.py  render_handbook.py  render_tier_benchmarks.py  render_why_oscillatools.py
scpn_quantum_engine/: Cargo.toml  README.md  __init__.py  pyproject.toml
scpn_quantum_engine/benches/: hot_paths.rs
scpn_quantum_engine/fuzz/: Cargo.toml
scpn_quantum_engine/fuzz/corpus/program_ad_ir/: empty_effects.json  malformed_cumulative.json  unsafe_alias.json  (+4 more)
scpn_quantum_engine/fuzz/fuzz_targets/: knm_validators.rs  ml_dsa_ntt.rs  program_ad_ir.rs  studio_kuramoto_input.rs
scpn_quantum_engine/program_ad_replay/: Cargo.toml
scpn_quantum_engine/program_ad_replay/src/: lib.rs  program_ad_cumulative_reduction.rs  program_ad_interpolation_reduction.rs  program_ad_ir.rs  program_ad_linalg_matrix_power.rs  program_ad_linalg_pinv.rs  program_ad_linalg_spectral.rs  program_ad_linalg_svd.rs  program_ad_registry_mirror.rs  program_ad_signal_reduction.rs  program_ad_static_source_map.rs
scpn_quantum_engine/src/: analog.rs  biological_qec.rs  community.rs  compiler_ad.rs  complex_utils.rs  concat_qec.rs  cosimulation.rs  dla.rs  entropy.rs  feedback.rs  fep.rs  frc.rs  gauge_lattice.rs  hamiltonian.rs  hls_quantise.rs  knm.rs  koopman.rs  krylov.rs  kuramoto.rs  kuramoto_autodiff.rs  kuramoto_common.rs  kuramoto_coupling.rs  kuramoto_delayed.rs  kuramoto_dopri.rs  kuramoto_inertial.rs  kuramoto_noisy.rs  kuramoto_observables.rs  kuramoto_symplectic_inertial.rs  lib.rs  lindblad.rs  ml_dsa.rs  monte_carlo.rs  mpc.rs  otoc.rs  pauli.rs  pec.rs  program_ad_ir.rs  program_ad_linalg_array.rs  program_ad_linalg_diag.rs  program_ad_linalg_diagflat.rs  (+18 more)
scpn_quantum_engine/src/compiler_ad/: kernels.rs
scpn_quantum_engine/studio_program_ad_wasm/: Cargo.toml
scpn_quantum_engine/studio_program_ad_wasm/src/: lib.rs
scpn_quantum_engine/studio_wasm_kernel/: Cargo.toml
scpn_quantum_engine/studio_wasm_kernel/src/: kuramoto.rs  lib.rs
scpn_quantum_engine/tests/: program_ad_cumulative.rs  program_ad_dynamic_boundaries.rs  program_ad_interpolation.rs  program_ad_ir.rs  program_ad_linalg_array.rs  program_ad_linalg_diag.rs  program_ad_linalg_diagflat.rs  program_ad_linalg_matrix_power.rs  program_ad_linalg_pinv.rs  program_ad_linalg_solve.rs  program_ad_linalg_spectral.rs  program_ad_linalg_svd.rs  program_ad_panic_boundary.rs  program_ad_signal.rs  program_ad_stencil.rs
scpn_quantum_engine/tests/program_ad_ir/: fixtures.rs  linalg.rs  parser_registry.rs  reductions.rs  scalar_forward.rs  scalar_reverse.rs  structural.rs
(+8861 files in other folders)
