# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Quantum Control — Project Configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scpn-quantum-control"
version = "0.9.7"
description = "NISQ quantum simulation of coupled Kuramoto oscillator networks via XY Hamiltonian mapping"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Miroslav Šotek", email = "protoscience@anulum.li" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "quantum computing",
    "kuramoto",
    "spiking neural networks",
    "plasma control",
    "scpn",
    "qiskit",
]
dependencies = [
    "qiskit>=2.2,<3.0",
    "qiskit-aer>=0.15,<1.0",
    "symengine>=0.14,<1.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
    "networkx>=3.0,<4.0",
    "requests>=2.22,<3.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
    "urllib3>=2.7,<3.0",
]

[project.scripts]
scpn-bench = "scpn_quantum_control.bench_cli:main"
scpn-verify-hardware-packs = "scpn_quantum_control.hardware_result_packs:main"
scpn-generate-hardware-pack-evidence = "scpn_quantum_control.hardware_result_pack_evidence:main"

[project.optional-dependencies]
viz = ["matplotlib>=3.5,<4.0"]
gpu = ["cupy-cuda12x>=13.0"]
jax = ["jax[cuda12]>=0.4.30"]
rust = ["scpn-quantum-engine>=0.2.0"]
dev = ["pytest>=7.0,<10.0", "pytest-cov>=4.0,<8.0", "ruff>=0.4,<1.0", "hypothesis>=6.0,<7.0", "pre-commit>=3.0,<5.0", "mypy>=1.0,<2.0", "bandit>=1.7,<2.0", "build>=1.0,<2.0", "tomli>=2.0,<3.0", "types-defusedxml>=0.7,<1.0"]
docs = ["mkdocs>=1.6,<2.0", "mkdocs-material>=9.0,<10.0", "pymdown-extensions>=10.0,<11.0", "mkdocstrings[python]>=0.24,<2.0"]
ibm = ["qiskit-ibm-runtime>=0.40,<1.0"]
tensor = ["quimb>=1.10,<2.0"]
mitigation = ["mitiq>=0.30,<2.0"]
topology = ["ripser>=0.6,<1.0"]
opensys = ["qutip>=5.0,<6.0"]
pennylane = ["pennylane>=0.40,<1.0"]
xvalidate = ["qutip>=5.0,<6.0", "dynamiqs>=0.3,<1.0"]
config = ["pydantic-settings>=2.0,<3"]
logging = ["structlog>=24.0,<26"]
julia = ["juliacall>=0.9,<2"]
dla-parity = ["qutip>=5.0,<6.0"]
app-eeg = ["mne>=1.6,<2.0", "edfio>=0.4,<1.0"]
app-plasma = ["h5py>=3.10,<4.0", "pandas>=2.0,<3.0"]
app-power-grid = ["pandapower>=2.14,<4.0"]
app-fep = ["pydantic>=2.0,<3.0"]
app-benchmarks = ["scpn-quantum-control[app-eeg,app-plasma,app-power-grid,app-fep]"]
all = ["scpn-quantum-control[viz,ibm,tensor,mitigation,topology,opensys,pennylane,xvalidate,config,logging,julia,dla-parity]"]
accelerated = ["scpn-quantum-control[gpu,jax]"]

[project.entry-points."scpn_quantum_control.backends"]
analog_kuramoto = "scpn_quantum_control.hardware.backends:analog_kuramoto_factory"
hybrid_digital_analog = "scpn_quantum_control.hardware.backends:hybrid_digital_analog_factory"
qiskit_ibm = "scpn_quantum_control.hardware.backends:qiskit_ibm_factory"
qiskit_aer = "scpn_quantum_control.hardware.backends:qiskit_aer_factory"
cirq = "scpn_quantum_control.hardware.backends:cirq_factory"
braket = "scpn_quantum_control.hardware.backends:braket_factory"
pennylane = "scpn_quantum_control.hardware.backends:pennylane_factory"
iqm = "scpn_quantum_control.hardware.backends:iqm_factory"

[project.entry-points."scpn_quantum_control.application_plugins"]
eeg_alpha = "scpn_quantum_control.applications.app_plugins:eeg_application_plugin_factory"
friston_fep = "scpn_quantum_control.applications.app_plugins:fep_application_plugin_factory"
plasma_iter_mhd = "scpn_quantum_control.applications.app_plugins:plasma_application_plugin_factory"
power_grid_ieee5 = "scpn_quantum_control.applications.app_plugins:power_grid_application_plugin_factory"

[project.urls]
Homepage = "https://github.com/anulum/scpn-quantum-control"
Repository = "https://github.com/anulum/scpn-quantum-control"
Issues = "https://github.com/anulum/scpn-quantum-control/issues"
Changelog = "https://github.com/anulum/scpn-quantum-control/blob/main/CHANGELOG.md"
Documentation = "https://anulum.github.io/scpn-quantum-control"

[tool.hatch.build.targets.sdist]
exclude = [".github/", "dist/", "results/", "figures/", "notebooks/"]

[tool.hatch.build.targets.wheel]
packages = ["src/scpn_quantum_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow and not hardware and not internal_corpus and not performance'"
markers = [
    "slow: marks tests as slow (run with '-m slow')",
    "hardware: requires IBM Quantum credentials",
    "internal_corpus: requires ignored internal manuscript extraction artefacts",
    "performance: wall-clock performance gate for controlled benchmark runs",
]
xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning:qiskit",
    "ignore::DeprecationWarning:stevedore",
    "ignore:COBYLA.*Invalid MAXFUN:UserWarning:scipy",
]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary can reduce readability for physics code
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E402"]  # notebooks install deps before importing them
"notebooks/*.ipynb" = ["E402", "F821"]  # notebooks: mid-cell imports normal, cross-cell scope invisible to linter
"notebooks/**/*.ipynb" = ["E402", "F821"]  # colab notebooks same
"notebooks/kaggle_push/*.py" = ["E402", "B007"]  # kaggle scripts: iteration loops without using index
"tests/test_mps_evolution.py" = ["E402", "I001"]  # importorskip before local import
"tests/test_mitiq_integration.py" = ["E402", "I001"]  # importorskip before local import

[tool.ruff.lint.isort]
known-first-party = ["scpn_quantum_control"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
check_untyped_defs = true
ignore_missing_imports = false
files = [
    "src/scpn_quantum_control/",
]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qiskit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qiskit_aer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qiskit_ibm_runtime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sc_neurocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jax.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "ripser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cirq.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "mitiq.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "cotengra.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "quimb.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "pennylane.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "structlog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "juliacall"
ignore_missing_imports = true
follow_imports = "skip"

[tool.mutmut]
# Mutmut 2.x config. Baseline target: `analysis/koopman.py` — small
# (~250 lines), self-contained, 34 dedicated tests including the 13
# input-validation tests from commit c7d4ccd. Extend
# `paths_to_mutate` as tests harden other modules (audit item B7 in
# the internal gap audit).
#
# `runner` is a single executable command mutmut invokes per mutant.
# Keep it tight: only the tests that cover the target module.
paths_to_mutate = "src/scpn_quantum_control/analysis/koopman.py"
tests_dir = "tests/"
runner = "python -m pytest -x -q tests/test_koopman.py"

[tool.coverage.run]
source = ["scpn_quantum_control"]
omit = [
    # Julia tier requires juliacall + Julia runtime; not installed in
    # CI (would add ~4 min JIT boot per run). Dispatcher covers the
    # fallthrough path; the Julia-side wrapper is exercised locally
    # via the [julia] extra.
    "*/scpn_quantum_control/accel/julia/*",
    # Paper 0 source-validation modules are generated source-accounting
    # artefacts. Register reconciliation and generated-loader tests cover
    # their production contract; per-file line coverage is tracked through
    # the explicit release exclusions document instead of inflating the
    # hand-maintained source denominator.
    "*/scpn_quantum_control/paper0/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
exclude_also = ["if TYPE_CHECKING:"]
