# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# oscillatools — Project Configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oscillatools"
version = "0.1.0"
description = "Differentiable, control-oriented toolkit for coupled-phase-oscillator (Kuramoto) dynamics"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Miroslav Šotek", email = "protoscience@anulum.li" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "kuramoto",
    "coupled oscillators",
    "synchronisation",
    "phase dynamics",
    "dynamical systems",
    "differentiable simulation",
    "control",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
rust = ["scpn-quantum-engine>=0.2.0"]
julia = ["juliacall>=0.9,<2"]
jax = ["jax>=0.4.30"]
torch = ["torch>=2.2,<3.0"]
sklearn = ["scikit-learn>=1.3,<2.0"]
viz = ["matplotlib>=3.5,<4.0"]
dev = [
    "pytest>=7.0,<10.0",
    "pytest-cov>=4.0,<8.0",
    "ruff>=0.4,<1.0",
    "hypothesis>=6.155.2,<7.0",
    "mypy>=1.0,<3.0",
    "build>=1.0,<2.0",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.0,<10.0",
    "pymdown-extensions>=10.0,<11.0",
    "mkdocstrings[python]>=0.24,<2.0",
]

[project.urls]
Homepage = "https://github.com/anulum/scpn-quantum-control"
Repository = "https://github.com/anulum/scpn-quantum-control"
Issues = "https://github.com/anulum/scpn-quantum-control/issues"
Changelog = "https://github.com/anulum/scpn-quantum-control/blob/main/oscillatools/CHANGELOG.md"
Documentation = "https://anulum.github.io/scpn-quantum-control/oscillatools/"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".coverage",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".venv*/",
    "coverage.xml",
    "dist/",
    "results/",
    "site/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oscillatools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (run with '-m slow')",
]
xfail_strict = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary can reduce readability for physics code
]

[tool.ruff.lint.per-file-ignores]
"tests/kuramoto_autodiff_witness.py" = ["E402", "I001"]  # importorskip(jax) before local import
"tests/test_diff_kuramoto_autodiff_witness.py" = ["E402", "I001"]  # importorskip(jax) before local import
"tests/kuramoto_delay_sensitivity_witness.py" = ["E402", "I001"]  # importorskip(jax) before local import
"tests/test_diff_kuramoto_delay_sensitivity_witness.py" = ["E402", "I001"]  # importorskip(jax) before local import
"tests/test_kuramoto_visualisation.py" = ["E402", "I001"]  # importorskip(matplotlib) before local import

[tool.ruff.lint.isort]
known-first-party = ["oscillatools"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
check_untyped_defs = true
ignore_missing_imports = false
files = [
    "src/oscillatools/",
]

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jax.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "juliacall"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "scpn_quantum_engine.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.coverage.run]
source = ["oscillatools"]
omit = [
    # Julia tier requires juliacall + a Julia runtime; the dispatcher
    # fallthrough is covered, the Julia-side wrapper is exercised via the
    # [julia] extra locally.
    "*/oscillatools/accel/julia/*",
    # The JAX autodiff tier needs jax; its importorskip tests run under the
    # [jax] extra, not the pinned numpy+scipy CI floor.
    "*/oscillatools/accel/jax_kuramoto.py",
    "*/oscillatools/accel/jax_kuramoto_delayed.py",
    "*/oscillatools/accel/jax_kuramoto_mpc.py",
    # The neural-operator dataset/surrogate surface needs the [torch] extra;
    # the host-independent cost model stays covered on the floor.
    "*/oscillatools/neural_operator.py",
]

[tool.coverage.report]
omit = [
    "*/oscillatools/accel/julia/*",
    "*/oscillatools/accel/jax_kuramoto.py",
    "*/oscillatools/accel/jax_kuramoto_delayed.py",
    "*/oscillatools/accel/jax_kuramoto_mpc.py",
    "*/oscillatools/neural_operator.py",
]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.\\s*$",
]
exclude_also = ["if TYPE_CHECKING:"]
