# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# SCPN Quantum Control — Cargo Configuration
[package]
name = "scpn-quantum-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "scpn_quantum_engine"
# `cdylib` is the Python extension module built by `maturin`.
# `rlib` is required to link the crate into `benches/`, `tests/`
# and any other Rust binary — criterion benchmarks depend on it.
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[features]
# PyO3 `extension-module` is only needed when compiling the Python
# shared object. `cargo bench` / `cargo test` without `--features
# extension-module` link against a regular libpython (or no libpython
# at all for non-PyO3 targets). `maturin develop` / `maturin build`
# must be invoked with `--features extension-module`.
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.25", default-features = false, features = ["macros"] }
ndarray = "0.17"
numpy = "0.25"
num-complex = "0.4"
rand = "0.9"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_paths"
harness = false
